--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -1,14 +1,12 @@
 .site-header {
-  background: $body-bg;
-  padding: toRem(19) 0;
+  padding: rem(22) 0;
 }
 
 .navbar-brand {
   color: var(--pulis-color-blue);
-  font-size: toRem(24);
+  font-size: rem(24);
   font-weight: var(--pulis-font-weight-900);
-  line-height: toRem(32);
-  font-family: var(--pulis-font-family-roboto);
+  line-height: rem(32);
   letter-spacing: 0;
 }
 
@@ -32,14 +30,13 @@
 }
 
 .post-date {
-  font-size: toRem(12);
+  font-size: rem(12);
   text-align: center;
   text-transform: uppercase;
   color: var(--pulis-color-wheat);
-
 }
 
-.entry-content {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
+
+.button-cta {
+  margin-left: rem(35);
 }
