--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -2,21 +2,33 @@
 // Hero
 // =======================================================
 
-.home .hero {
+.hero {
   background: var(--pulis-color-grey);
   padding: 40px 0;
   min-height: 440px;
+  display: flex;
+  align-items: center;
 
   @media(max-width: 991px) {
     min-height: auto;
+    padding: 20px 0;
+  }
+
+  &--letters {
+    margin-bottom: rem(30);
   }
 }
 
 .c-hero__title {
-  font-size: rem(54);
-  line-height: rem(63);
-  font-weight: 400;
+  font-size: rem(43);
+  line-height: rem(55);
+  font-weight: 700;
   margin: 0;
+
+  @media(max-width: 480px) {
+    font-size: rem(30);
+    line-height: normal;
+  }
 }
 
 .c-hero__lead {
@@ -24,7 +36,12 @@
   font-weight: 400;
   line-height: rem(32);
   margin: 0;
-  padding: rem(36) 0;
+  padding: rem(20) 0;
+
+  @media(max-width: 480px) {
+    font-size: rem(18);
+    line-height: normal;
+  }
 }
 
 .c-hero__link {
@@ -50,3 +67,9 @@
     display: none;
   }
 }
+
+.service-steps {
+  background: var(--pulis-color-orange);
+  padding: rem(60) 0;
+}
+
