--- a/assets/scss/layouts/_sidebar.scss
+++ b/assets/scss/layouts/_sidebar.scss
@@ -3,8 +3,11 @@
 // =========================================================================
 
 .sidebar {
+  padding-left: rem(100);
+
   h2 {
-    font-size: toRem(24);
+    color: var(--pulis-color-blue);
+    font-size: rem(20);
     font-weight: 700;
   }
 
@@ -12,5 +15,33 @@
     margin: 1.5rem 0;
 
     &:first-child { margin-top: 0; }
+  }
+
+  .widget {
+    margin-top: 30px;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.05);
+    padding: 30px 25px;
+    background-color: var(--pulis-color-grey);
+  }
+
+  .widget ul {
+    padding-left: 0;
+    list-style-type: none;
+    margin: 0;
+  }
+
+  .widget ul li {
+    position: relative;
+    margin-bottom: rem(12);
+    overflow: hidden;
+    color: var(--pulis-color-black);
+    font-size: rem(14);
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .widget_categories ul li a {
+    text-transform: capitalize;
   }
 }
