--- a/assets/scss/settings/_debug.scss
+++ b/assets/scss/settings/_debug.scss
@@ -1,17 +1,13 @@
-/*------------------------------------*\
-    #Debugging helpers
-\*------------------------------------*/
+// =========================================================================
+// Debugging helpers
+// =========================================================================
 
 $pesticide: false; // Change to true for debugging layouts
 
-/*
-    pesticide v1.3.0 . @mrmrs . MIT
-*/
-
 @if $pesticide == true {
-
 	body {
-		outline: 1px solid #2980b9 !important; }
+		outline: 1px solid #2980b9 !important; 
+  }
 
 	article {
 		outline: 1px solid #3498db !important; }
