--- a/assets/scss/base/_buttons.scss
+++ b/assets/scss/base/_buttons.scss
@@ -8,12 +8,10 @@
 \*------------------------------------*/
 
 .button {
-  background: var(--pulis-color-grey);
-  border-radius: 4px;
-  color: var(--pulis-color-black);
+  border-radius: rem(4);
   font-weight: 500;
   text-decoration: none;
-  padding: toRem(8) toRem(16);
+  padding: rem(6);
   transition: var(--transition);
 
   &:active,
@@ -23,105 +21,16 @@
     color: var(--pulis-color-black);
     text-decoration: none;
   }
+
+  @extend .btn;
 }
 
-// button,
-// .button {
-//   @extend .btn;
+.button--grey {
+  background: var(--pulis-color-grey);
+  color: var(--pulis-color-black);
+}
 
-// 	&:hover {
-// 		background-color: $link-color--hover;
-// 		border-color: $link-color--hover;
-// 	}
-
-// 	&:focus,
-// 	&:active {
-// 		color: $black;
-// 		background-color: $focus-color;
-// 		border-color: $black;
-// 	}
-// }
-
-// button:not([type="submit"]) {
-// 	text-align: start;
-// }
-
-
-// /**
-// Remove link styling from links styled as buttons.
-//  */
-// .button {
-// 	text-decoration: none;
-// }
-
-
-// /**
-// Remove link styling from actual buttons styled as buttons.
-//  */
-// button.button,
-// input[type="submit"].button {
-// 	text-decoration: none;
-// }
-
-
-// // Full-width buttons
-// .button--wide {
-// 	text-align: center;
-// 	width: 100%;
-// }
-
-
-// // For buttons with a visible border
-// .button--alt {
-// 	background-color: transparent;
-// 	color: $link-color;
-
-// 	&:hover {
-// 		background-color: $light-blue;
-// 		color: $link-color--hover;
-// 	}
-
-// 	&:focus,
-// 	&:active {
-// 		background-color: $focus-color;
-// 		border-width: 3px;
-// 		color: $black;
-// 		padding: rem(10) rem(23);
-// 	}
-// }
-
-
-// // For buttons with no visible background or border
-// .button--ghost {
-// 	background-color: transparent;
-// 	border-color: transparent;
-// 	border-radius: 0;
-// 	color: $black;
-// 	font-weight: normal;
-// 	padding-left: 0;
-// 	padding-right: 0;
-
-// 	&:hover {
-// 		background-color: transparent;
-// 		border-color: transparent;
-// 	}
-// }
-
-
-// // Disabled buttons
-// .button[disabled],
-// .button.js-disabled {
-// 	background-color: $twiki-gray;
-// 	border-color: $twiki-gray;
-// 	box-shadow: none;
-// 	color: #303030;
-// 	cursor: not-allowed;
-
-// 	&:hover,
-// 	&:focus,
-// 	&:active {
-// 		background-color: $twiki-gray;
-// 		color: #303030;
-// 		outline: 0;
-// 	}
-// }
+.button--blue {
+  background: var(--pulis-color-blue);
+  color: var(--pulis-color-white);
+}
