--- a/assets/scss/base/_lists.scss
+++ b/assets/scss/base/_lists.scss
@@ -2,137 +2,82 @@
 // Lists
 // ========================================================
 
-// Remove default list styles on lists with a class name (e.g. 'nav-list')
-ol,
-ul {
-  list-style: none;
-}
-
-ol, ul, dl {
-  padding-left: rem(16);
-}
-
-ol[class],
-ul[class] {
-	list-style: none;
-	padding: 0;
-}
-
-ul:not([class]),
-ol:not([class]),
-ol.counter {
-	margin-block-end: 1em;
-	margin-block-start: 1em;
-	padding-inline-start: 0;
-
-	> * + *,
-	li ul,
-	li ol {
-		margin-top: 0.75em;
-	}
-}
-
-ol.counter {
-	::marker {
-		content: counters(list-item, ".") ". ";
-	}
-}
-
-// No bullets or numbering
-.clean-list {
-	li {
-		display: block;
-	}
-}
-
-// Description lists / Definition lists
-dl {
-	margin-block-end: 1em;
-	margin-block-start: 1em;
-
-	dt {
-		font-weight: bold;
-	}
-
-	dd + dt {
-		margin-top: 0.5em;
-	}
-
-	dt + dd,
-	dd + dd {
-		margin-top: 0.25em;
-	}
-}
-
-// display items on the same line (comma-separated)
-dl.inline {
-	div {
-		align-items: baseline;
-		display: flex;
-		flex-wrap: wrap;
-
- 		dt, dd {
-			margin-inline-start: 0;
-		}
-
-		dt::after {
-			content: ":\00a0 ";
-		}
-
-		dd:not(:last-child):after {
-			content: ',\00a0 ';
-		}
-	}
-}
-
-// With a grid layout for a more tabulated feel
-dl.grid {
-	@supports (grid-row-start: auto) {
-		column-gap: 1rem;
-		display: grid;
-		grid-template-columns: max-content;
-		grid-template-rows: 1fr;
-		row-gap: 1rem;
-
-		dd + dt,
-		dt + dd,
-		dd + dd {
-			margin-top: 0;
-		}
-
-		dt {
-			grid-column-start: 1;
-			grid-column-end: 2;
-		}
-
-		dd {
-			grid-column-start: 2;
-			grid-column-end: 3;
-		}
-	}
-}
-
-// Category List
-.category__item {
-  margin-bottom: var(--pulis-block-spacing-vertical);
-  padding: var(--pulis-block-spacing-vertical) var(--pulis-block-spacing-horizontal);
-  border-radius: var(--pulis-border-radius);
-  background: var(--pulis-card-background-color);
-  box-shadow: var(--pulis-card-box-shadow);
-}
-
-.category__link {
-  font-size: 1.5rem;
-}
-
 .list-grid {
-  --grid-gap: 2.5em;
-
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 310px), 1fr));
   grid-template-rows: 1fr;
-  grid-gap: var(--grid-gap);  
+  grid-gap: rem(24);
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.list__item {
+  display: inline-block;
+  margin-right: rem(16);
+}
+
+.list-badge {
+  font-size: rem(16);
+  font-weight: 600;
+  display: inline-block;
+  line-height: rem(21);
+  padding: rem(4) rem(8);
+
+  &--grey {
+    background: var(--pulis-color-grey);
+  }
+}
+
+.list-badge a {
+  text-decoration: none !important;
+}
+
+.wp-block-list li {
+  margin-bottom: rem(10);
+}
+
+// Social
+// ========================================================
+
+.social__list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.social__item {
+  display: inline-block;
+  margin-right: rem(10);
+}
+
+.social__link {
+  height: rem(20);
+  width: rem(20);
+  background: var(--pulis-color-grey);
+  padding: 8px;
+  border-radius: 50%;
+}
+
+.social__icon {
+  height: rem(20);
+  width: rem(20);
+  color: var(--pulis-color-black);
+}
+
+// Blog
+// ========================================================
+
+.blog__list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.blog__item {
+  display: inline-block;
+  margin-right: rem(10);
 }
