--- a/assets/scss/components/_bookmarks.scss
+++ b/assets/scss/components/_bookmarks.scss
@@ -14,7 +14,6 @@
 
 .bookmark__item {
   background: $bg-border;
-  min-height: 205px;
   padding: rem(16);
 
   @media(max-width: 630px) {
@@ -30,7 +29,7 @@
 
 .bookmark__link {
   font-size: rem(20);
-  color: $main;
+  color: var(--pulis-color-blue);
   text-decoration: none;
   transition: color .3s ease;
 }
@@ -42,7 +41,7 @@
 }
 
 .bookmark__date {
-  color: $main;
+  color: var(--pulis-color-blue);
   font-size: rem(14);
   font-weight: 700;
 }
