--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -4,25 +4,34 @@
 
 // TODO: Refactor this
 .card {
-  --bs-card-spacer-y: 2rem;
-  --bs-card-spacer-x: 2rem;
   --bs-card-border-color: #e7ecef;
 
   &-title {
-    color: $main;
+    //color: $main;
     font-size: rem(22);
     font-weight: 400;
     margin: 0;
     word-wrap: break-word;
   }
 
+  &-title--blog {
+    padding: rem(8) 0;
+  }
+
   &-text > p {
     font-size: rem(16);
   }
 
-  &-link {
-    color: $main;
+  &-category {
+    display: block;
+    padding: rem(24) 0 0 0;
   }
+}
+
+.card__letter {
+  --bs-card-border-color: #e7ecef;
+
+  @extend .card;
 }
 
 .card__letter--small {
@@ -31,10 +40,10 @@
 
 
 .c-card {
-  margin-bottom: var(--pulis-block-spacing-vertical);
+  margin-bottom: var(--vs-block-spacing-vertical);
   padding: rem(8);
-  border-radius: var(--pulis-border-radius);
-  border: 1px solid var(--pulis-color-grey);
+  border-radius: var(--vs-border-radius);
+  border: 1px solid var(--vs-color-grey);
   min-height: 208px;
 
   &--transparent {
@@ -51,21 +60,20 @@
   left: 93px;
   width: 27px;
   height: 137px;
-  background: var(--pulis-color-blue) 0% 0% no-repeat padding-box;
+  background: var(--vs-color-blue) 0% 0% no-repeat padding-box;
   background: #274C78 0% 0% no-repeat padding-box;
   border-radius: 4px 4px 0px 0px;
   opacity: 1;
 }
 
 .c-card__title {
-  color: $text-color;
   font-size: rem(22);
   font-weight: 400;
   line-height: rem(26);
   margin: 0;
   transition: var(--transition);
   text-decoration: none;
-  word-break: break-all;
+  word-break: break-word;
 
   a {
     text-decoration: none;
@@ -79,14 +87,14 @@
 }
 
 .c-card__meta {
-  font-size: toRem(12);
+  font-size: rem(12);
   line-height: 19px;
   text-transform: uppercase;
-  padding-bottom: toRem(16);
+  padding-bottom: rem(16);
 }
 
 .c-card__body {
-  padding: toRem(32);
+  padding: rem(32);
 }
 
 .c-card__content {
@@ -105,7 +113,6 @@
 }
 
 .c-card__link {
-  color: $main;
   text-decoration: underline;
   font-size: rem(16);
 
@@ -117,7 +124,7 @@
 
 .c-card__time {
   font-size: .9rem;
-  margin-bottom: var(--pulis-block-spacing-horizontal);
+  margin-bottom: var(--vs-block-spacing-horizontal);
 }
 
 .letter__body {
@@ -130,53 +137,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: toRem(30);
+  padding-right: rem(15);
 
   span {
-    color: $main;
+    color: var(--pulis-color-blue);
     display: flex;
     font-size: rem(22);
     font-weight: 700;
-    line-height: toRem(29);
-  }
-}
-
-#webmention-source {
-  background: var(--pulis-color-white);
-  border: 1px solid;
-  padding: 10px;
-  width: 80%;
-  display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: var(--bs-body-color);
-    appearance: none;
-    background-color: var(--bs-body-bg);
-    background-clip: padding-box;
-    border: var(--bs-border-width) solid var(--bs-border-color);
-    border-radius: var(--bs-border-radius);
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.card-category {
-  border-top-left-radius: rem(4);
-  border-top-right-radius: rem(4);
-  transform: rotate(-90deg);
-  padding: rem(5) rem(15);
-  position: absolute;
-
-  &--a11y {
-    background: $category-color-8;
-    color: $white;
-    font-size: rem(14);
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    vertical-align: middle;
-    text-transform: uppercase;
-    text-align: center;
+    line-height: rem(29);
   }
 }
