--- a/assets/scss/settings/_typesetting.scss
+++ b/assets/scss/settings/_typesetting.scss
@@ -1,20 +1,6 @@
-/*------------------------------------*\
-    #Typesetting
-\*------------------------------------*/
-
-/**
-Use https://www.cssfontstack.com/ and https://meowni.ca/font-style-matcher/ to pick
-system fonts that are reasonably close to any web fonts needed for the project.
-
-This improves performance, avoids Flash Of Invisible Text (FOIT) and minimises
-Flash of Unstyled Content (FOUC) - see https://helenvholmes.com/writing/type-is-your-right/
-
-Be sure to include fonts for both Mac OS and Windows. Use quote marks around
-fonts with white space in their name.
-
-When Font Face Observer has detected that the @font-face files are loaded, then we
-can safely use the web fonts instead of the system fonts.
- */
+// =========================================================================
+// Typesetting
+// =========================================================================
 
 $font-family: 'Roboto', sans-serif;
 $font-loaded-family: 'Roboto', sans-serif;
