--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Bruno Pulis
+Theme Name: Odin
 Theme URI: https://github.com/wpbrasil/odin
 Description: Base theme for development with WordPress.
 Author: Grupo WordPress Brasil
@@ -8,7 +8,7 @@ Version: 2.3.0
 Tags: light, gray, white, one-column, two-columns, right-sidebar, flexible-width, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, translation-ready
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: bruno-pulis
+Text Domain: odin
 
 Don't add css in this file!
 The theme css is in assets/css/style.css
